# hse-se-2026

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  diagrams_source_mermaid.md
include/shell/: Builtins.hpp  CommandResult.hpp  Environment.hpp  Executor.hpp  ExternalRunner.hpp  Parse.hpp  ShellApp.hpp  Tokenizer.hpp  Utils.hpp
src/: Builtins.cpp  Environment.cpp  Executor.cpp  ExternalRunner_posix.cpp  ExternalRunner_win.cpp  Parse.cpp  ShellApp.cpp  Tokenizer.cpp  Utils.cpp  main.cpp
tests/: fixture_env.cpp  shell_tests.cpp
